# VirCompanion

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Animation.cpp  Animation.h  App.cpp  App.h  main.cpp
